--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=GerenciamentoFuncionarios
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/database_app_manager
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
